[package]
name = "rpmsgfs-server"
version = "0.1.0"
edition = "2021"
license = "BSD3"
description = "A daemon that serves filesystem access through RpMsg"
repository = "https://github.com/NXP-Robotics/rpmsgfs_server.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.29"
nix = { version = "0.31.1", features = ["fs"] }
serde = "1.0.228"
serde_derive = "1.0.228"
std-logger = "0.5.8"
